# Restaurant_recommander

./: EDA.ipynb  README.md  pyproject.toml
backend/: backend.py
data/: NA_restaurants.parquet
