[tool.poetry]
name = "restaurant-recommander"
version = "0"
description = "This project aims to create a restaurant recommander that will help users find the best restaurant that suits their choice and desires."
authors = ["NouamaneELGueddarii <nouamane-gueddari@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
